--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <!-- Navbar start -->
 
-      <div class="navbar "data-aos="fade-up">
+      <div class="navbar "data-aos="fade-down">
         <img src="./images/navbar__logo.png" alt="error" class="navbar__logo" />
         <ul class="navbar__list">
           <li class="navbar__item">
@@ -42,14 +42,15 @@
       <!-- Navbar end -->
       <!-- Header bar start -->
       <div class="header">
-        <div class="header__left">
+        <div class="header__left" data-aos="fade-right">
           <img
-            src="https://avatars.mds.yandex.net/i?id=e67c20f98bdc512c5d3bc20c140f8fac-5719595-images-taas-consumers&n=27&h=480&w=480"
+            src="./images/photo.jpg"
             alt=""
+            width="300px"
             class="header__img"
           />
         </div>
-        <div class="header__right">
+        <div class="header__right" data-aos="fade-left">
           <ul class="header__item">
             <li class="header__list_name">Самат</li>
             <li class="header__list_surname">Бексултанов</li>
@@ -80,27 +81,27 @@
       <div class="sidebar__content">
         <div class="sidebar__left">
           <ul class="sidebar__list">
-            <div class="sidebar__containers">
+            <div class="sidebar__containers" data-aos="fade-right">
               <li class="sidebar__item">
                 <h2 id="a1">Немного обо мне</h2>
                 <span>совсем немного</span>
               </li>
             </div>
 
-            <div class="sidebar__containers">
+            <div class="sidebar__containers" data-aos="fade-right">
               <li class="sidebar__item">
                 <h2 id="a2">Хобби</h2>
                 чревоугодие и чтение не хобби (｡◕‿◕｡)
               </li>
             </div>
 
-            <div class="sidebar__containers">
+            <div class="sidebar__containers" data-aos="fade-right">
               <li class="sidebar__item">
                 <h2 id="a3">Что я умею</h2>
                 сын маминой подруги или врунишка?
               </li>
             </div>
-            <div class="sidebar__containers">
+            <div class="sidebar__containers" data-aos="fade-right">
               <li class="sidebar__item">
                 <h2 id="a4">Skills</h2>
                 и это тоже"правда"?
@@ -113,7 +114,7 @@
         <!-- Content Bar start -->
         <div class="content-bar__right">
           <div class="content-bar__list">
-            <div class="content-bar__containers">
+            <div class="content-bar__containers "data-aos="fade-left">
               <li class="content-bar__item">
                 Меня зовут Самат, фамилия Бексултанов, я родился в Бишкеке в
                 2001 году 21 декабря, ненавижу эту дату т.к. меня поздравляли не
@@ -124,21 +125,21 @@
                 всё что люблю, зачем вы вообще это читаете?
               
             </li>
-            <img src="https://s3.memeshappen.com/memes/Who-am-i--meme-32175.jpg" alt="" class="content-bar__img">
+            <!-- <img src="https://s3.memeshappen.com/memes/Who-am-i--meme-32175.jpg" alt="" class="content-bar__img"> -->
             </div>
-            <div class="content-bar__containers">
+            <div class="content-bar__containers"data-aos="fade-left">
               <li class="content-bar__item">
                 Рисование, Милитари тематика, Кодинг, Видеоигры <br />(Легче
                 рассказать чем не увлекаюсь)
               </li>
             </div>
-            <div class="content-bar__containers">
+            <div class="content-bar__containers"data-aos="fade-left">
               <li class="content-bar__item">
                 Я умею всё, танцевать ча-ча-ча, жонглировать собаками и даже
                 дрессировать драконов, но есть один нюанс(смотрите лого)
               </li>
             </div>
-            <div class="content-bar__containers">
+            <div class="content-bar__containers"data-aos="fade-left">
               <li class="content-bar__item_skills">
                   <div class="skills">
                 <span>HTML</span>
